--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scrissors</title>
+  <!-- Link to style sheet. -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Rock, Paper, Scissors Game</h1>
+  <div>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+  <div id="result"></div>
+  <div id="score">You: 0, Computer: 0</div>
   <script src="script.js"></script>
 </body>
 </html>
